--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,16 +3,17 @@
     padding: 0;
 }
 
-#menu{
+#startMenu{
     z-index: 10;
     position: absolute;
+    display: block;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.9);
    
 }
 
-#menu p:nth-child(1){
+#startMenu p:nth-child(1){
     position: absolute;
     font-style: italic;
     font-family: calibri;
@@ -22,7 +23,7 @@
     color: white;
 }
 
-#menu img{
+#startMenu img{
     position: absolute;
     top: 45vh;
     left: 49vw;
@@ -30,7 +31,7 @@
     width: 70px;
 }
 
-#menu p:nth-child(2){
+#startMenu p:nth-child(2){
     position: absolute;
     font-family: calibri;
     font-size: 1.8rem;
@@ -48,7 +49,7 @@
 }
 
 
-#cur_score {
+#car_score {
     position: absolute;
     top: 10px;
     right: 20px;
@@ -67,4 +68,43 @@ h1
     font-size: 70px;
     font-family: penultimate, sans-serif;
     color: #FFFEFD;
+}
+
+#restartMenu{
+    z-index: 10;
+    position: absolute;
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+   
+}
+
+
+#restartMenu p:nth-child(1){
+    position: absolute;
+    font-style: italic;
+    font-family: calibri;
+    font-size: 5rem;
+    top: 25vh;
+    left: 45vw;
+    color: white;
+}
+
+#restartMenu p:nth-child(2){
+    position: absolute;
+    font-family: calibri;
+    font-size: 1.8rem;
+    top: 60vh;
+    left: 33vw;
+    color:rgba(250, 250, 250,0.5);
+}
+
+#restartMenu img{
+    position: absolute;
+    top: 45vh;
+    left: 49vw;
+    height: 70px;
+    width: 70px;
 }
