--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,14 +19,14 @@
     font-style: italic;
     font-family: calibri;
     font-size: 5rem;
-    top: 25vh;
+    top: 20vh;
     left: 45vw;
     color: white;
 }
 
 #startMenu img{
     position: absolute;
-    top: 45vh;
+    top: 35vh;
     left: 49vw;
     height: 70px;
     width: 70px;
@@ -36,7 +36,7 @@
     position: absolute;
     font-family: calibri;
     font-size: 1.8rem;
-    top: 60vh;
+    top: 50vh;
     left: 33vw;
     color:rgba(250, 250, 250,0.5);
 }
@@ -46,9 +46,9 @@
     position: absolute;
     font-family: calibri;
     font-size: 2rem;
-    top: 70vh;
+    top: 60vh;
     left: 33vw;
-    color:rgba(255, 255, 255,0.7);
+    color:rgba(255, 255, 255, 0.7);
 }
 
 #startMenu ul {
@@ -56,9 +56,37 @@
     position: absolute;
     font-family: calibri;
     font-size: 1.8rem;
-    top: 75vh;
+    top: 65vh;
     left: 33vw;
     color:rgba(250, 250, 250,0.5);
+}
+
+#lvl1{
+    position: absolute;
+    width: 5vw;
+    height: 5vh;
+    border-style: none;
+    color: white;
+    top: 90vh;
+    left: 40vw;
+    background-color: rgba(0, 0, 0, 0.9);
+    border: 1px solid #fff;
+}
+
+#lvl2{
+    position: absolute;
+    width: 5vw;
+    height: 5vh;
+    border-style: none;
+    color: white;
+    top: 90vh;
+    left: 47vw;
+    background-color: rgba(0, 0, 0, 0.9);
+    border: 1px solid #fff;
+}
+
+#lvl1:active{
+    border: 10px solid blue;
 }
 
 #canvas{
