--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,7 @@
 }
 
 
+
 #startMenu{
     z-index: 10;
     position: absolute;
@@ -11,7 +12,8 @@
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.9);
-   
+    background-image: url(/Images/GameStart.jpg);
+    background-size:cover ;
 }
 
 #startMenu p:nth-child(1){
@@ -19,14 +21,14 @@
     font-style: italic;
     font-family: calibri;
     font-size: 5rem;
-    top: 20vh;
+    top: 6vh;
     left: 45vw;
     color: white;
 }
 
 #startMenu img{
     position: absolute;
-    top: 35vh;
+    top: 20vh;
     left: 49vw;
     height: 70px;
     width: 70px;
@@ -36,8 +38,8 @@
     position: absolute;
     font-family: calibri;
     font-size: 1.8rem;
-    top: 50vh;
-    left: 33vw;
+    top: 31vh;
+    left: 28vw;
     color:rgba(250, 250, 250,0.5);
 }
 
@@ -46,9 +48,10 @@
     position: absolute;
     font-family: calibri;
     font-size: 2rem;
-    top: 60vh;
-    left: 33vw;
-    color:rgba(255, 255, 255, 0.7);
+    top: 36vh;
+    left: 43vw;
+    color:#FFFEFF;
+    text-transform: uppercase;
 }
 
 #startMenu ul {
@@ -56,9 +59,9 @@
     position: absolute;
     font-family: calibri;
     font-size: 1.8rem;
-    top: 65vh;
-    left: 33vw;
-    color:rgba(250, 250, 250,0.5);
+    top: 40vh;
+    left: 70vw;
+    color: #fff;
 }
 
 #lvl1{
@@ -67,10 +70,12 @@
     height: 5vh;
     border-style: none;
     color: white;
-    top: 90vh;
-    left: 40vw;
+    top: 67vh;
+    left: 54vw;
     background-color: rgba(0, 0, 0, 0.9);
     border: 1px solid #fff;
+    border-radius: 5px;
+    outline-style: none;
 }
 
 #lvl2{
@@ -79,14 +84,19 @@
     height: 5vh;
     border-style: none;
     color: white;
-    top: 90vh;
-    left: 47vw;
+    top: 67vh;
+    left: 60vw;
     background-color: rgba(0, 0, 0, 0.9);
     border: 1px solid #fff;
+    border-radius: 5px;
+    outline-style: none;
 }
 
 #lvl1:active{
-    border: 10px solid blue;
+    transform: scale(1.1);
+}
+#lvl2:active{
+    transform: scale(1.1);
 }
 
 #canvas{
@@ -133,7 +143,8 @@ h1
     display: block;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.8);
+    background-size: cover;
     display: none;
    
 }
@@ -152,17 +163,33 @@ h1
 #restartMenu p:nth-child(2){
     position: absolute;
     font-family: calibri;
-    font-size: 1.8rem;
-    top: 60vh;
-    left: 33vw;
-    color:rgba(250, 250, 250,0.5);
+    font-size: 3rem;
+    top: 55vh;
+    left: 40vw;
+    color:rgba(255, 255, 255,0.9);
+}
+
+#restartMenu p:nth-child(3){
+    position: absolute;
+    font-family: calibri;
+    font-size: 2.1rem;
+    top: 65vh;
+    left: 40vw;
+    color:rgba(255, 255, 255,0.86);
 }
 
 #restartMenu img{
     position: absolute;
-    top: 45vh;
+    top: 40vh;
     left: 49vw;
     height: 70px;
     width: 70px;
 }
 
+#endscore{
+    position: absolute;
+    font-size: 2.2rem;
+    top: 65.2vh;
+    left: 52vw;
+    color: white;
+}
