--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.9);
-    background-image: url(/Images/GameStart.jpg);
+    background-image: url("../Images/GameStart.jpg");
     background-size:cover ;
 }
 
